...
          backgroundColor: Colors.deepPurple,
        ),
        body: Center(
          child: listView,
        ),
        floatingActionButton: FloatingActionButton(
          key: Key('CreateEmployee'),
          // When add button pressed,
          onPressed: () {
            // Show AlertDialog
            showDialog(
              context: context,
              builder: (context) {
...
                        child: SingleChildScrollView(
                          child: Column(
                            children: <Widget>[
                              Padding(
                                padding: const EdgeInsets.all(10),
                                child: TextField(
                                  key: Key('EmployeeUsername'),
                                  controller: usernameController,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    border: OutlineInputBorder(),
                                    labelText: 'Username',
                                    errorText: (usernameInvalid != "")
...
                                  ),
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsets.all(10),
                                child: TextField(
                                  key: Key('EmployeeFirstName'),
                                  controller: firstNameController,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    border: OutlineInputBorder(),
                                    labelText: 'First Name',
                                    errorText: (firstNameInvalid != "")
...
                                  ),
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsets.all(10),
                                child: TextField(
                                  key: Key('EmployeeLastName'),
                                  controller: lastNameController,
                                  obscureText: false,
                                  decoration: InputDecoration(
                                    border: OutlineInputBorder(),
                                    labelText: 'Last Name',
                                    errorText: (lastNameInvalid != "")
...
                                  ),
                                ),
                              ),
                              Padding(
                                padding: const EdgeInsets.all(10),
                                child: TextField(
                                  key: Key('EmployeePassword'),
                                  controller: passwordController,
                                  obscureText: true,
                                  decoration: InputDecoration(
                                    border: OutlineInputBorder(),
                                    labelText: 'Password',
                                    errorText: (passwordInvalid != "")
...
                            ],
                          ),
                        ),
                      ),
                      actions: <Widget>[
                        new FlatButton(
                            key: Key('CreateEmployeeCancel'),
                            child: new Text('Cancel',
                                style: TextStyle(
                                    color: Colors.deepPurple, fontSize: 18)),
                            // When cancel pressed,
                            onPressed: () {
                              // Close the dialog
                              Navigator.pop(context);
                            }),
                        new FlatButton(
                            key: Key('CreateEmployeeConfirm'),
                            child: new Text('OK',
                                style: TextStyle(
                                    color: Colors.deepPurple, fontSize: 18)),
                            // When ok pressed,
                            onPressed: () async {
                              // Set initial value for invalid data entry to false
                              bool invalid = false;
...
                          // When cancel pressed,
                          onPressed: () {
                            // Close the dialog
                            Navigator.pop(context);
                          }),
                      new FlatButton(
                          key: Key('DeleteEmployee'),
                          child: new Text('OK',
                              style: TextStyle(
                                  color: Colors.deepPurple, fontSize: 18)),
                          // When ok pressed,
                          onPressed: () async {
                            // If the there is an internet connection,
...
