...
        onWillPop: () async => false,
        child: ModalProgressHUD(
          inAsyncCall: loading,
          child: new Scaffold(
            drawer: customerDrawerController.createCustomerDrawer(context),
            appBar: AppBar(
              title: Text('Bookings'),
              backgroundColor: Colors.deepPurple,
            ),
            body: Center(child: listView),
          ),
        ));
  }
...
                      key: new Key('MaintenanceRequestActive'),
                      title: new Text('Maintenance Request In Progress'),
                      content: new Text(
                          'The maintenance request is being processed and an employee will deal with the request shortly'),
                      actions: <Widget>[
                        new FlatButton(
                            key: Key('ConfirmButton'),
                            child: new Text('OK',
                                style: TextStyle(
                                    color: Colors.deepPurple, fontSize: 18)),
                            // When ok pressed,
                            onPressed: () async {
                              // Close the dialog
...
                                child: Column(
                                  children: <Widget>[
                                    Padding(
                                      padding: const EdgeInsets.all(10),
                                      child: TextField(
                                        key: Key(
                                            'MaintenanceRequestDescription'),
                                        controller: descriptionController,
                                        obscureText: false,
                                        keyboardType: TextInputType.multiline,
                                        decoration: InputDecoration(
                                          border: OutlineInputBorder(),
                                          labelText: 'Description',
...
                                  // When cancel pressed,
                                  onPressed: () {
                                    // Close the dialog
                                    Navigator.pop(context);
                                  }),
                              new FlatButton(
                                  key: Key('CreateMaintenanceRequestConfirm'),
                                  child: new Text('OK',
                                      style: TextStyle(
                                          color: Colors.deepPurple,
                                          fontSize: 18)),
                                  // When ok pressed,
                                  onPressed: () async {
...
                futureBookings.elementAt(index).totalCost.toString()),
            subtitle: Text('Dates: ' +
                format.format(futureBookings.elementAt(index).startDateTime) +
                ' - ' +
                format.format(futureBookings.elementAt(index).endDateTime)),
            trailing: IconButton(
              key: Key('CancelBooking' + index.toString()),
              icon: Icon(Icons.cancel),
              // When delete icon is pressed,
              onPressed: () {
                // Show new AlertDialog
                showDialog(
                  context: context,
...
                child: SingleChildScrollView(
                  child: Column(
                    children: <Widget>[
                      Padding(
                        padding: const EdgeInsets.all(10),
                        child: TextField(
                          key: Key('ReviewRating'),
                          controller: ratingController,
                          obscureText: false,
                          keyboardType: TextInputType.number,
                          decoration: InputDecoration(
                            border: OutlineInputBorder(),
                            labelText: 'Rating /100',
...
                          ),
                        ),
                      ),
                      Padding(
                        padding: const EdgeInsets.all(10),
                        child: TextField(
                          key: Key('ReviewDescription'),
                          controller: descriptionController,
                          obscureText: false,
                          keyboardType: TextInputType.multiline,
                          decoration: InputDecoration(
                            border: OutlineInputBorder(),
                            labelText: 'Description',
...
                    // When cancel pressed,
                    onPressed: () {
                      // Close the dialog
                      Navigator.pop(context);
                    }),
                new FlatButton(
                    key: Key('CreateReviewConfirm'),
                    child: new Text('OK',
                        style:
                            TextStyle(color: Colors.deepPurple, fontSize: 18)),
                    // When ok pressed,
                    onPressed: () async {
                      // Set initial value for invalid data entry to false
...
