...
                style: TextStyle(fontSize: 24),
                textAlign: TextAlign.center,
              ),
              Padding(
                padding: const EdgeInsets.all(10),
                child: TextField(
                  key: Key('CustomerUsername'),
                  controller: usernameController,
                  obscureText: false,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'Username',
                    errorText: (usernameInvalid != "") ? usernameInvalid : null,
                  ),
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(10),
                child: TextField(
                  key: Key('CustomerPassword'),
                  controller: passwordController,
                  obscureText: true,
                  decoration: InputDecoration(
                    border: OutlineInputBorder(),
                    labelText: 'Password',
                    errorText: (passwordInvalid != "") ? passwordInvalid : null,
...
                padding: const EdgeInsets.all(10),
                // Button to login the customer
                child: Row(
                  mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                  children: <Widget>[
                    RaisedButton(
                        key: Key('CustomerLogin'),
                        color: Colors.deepPurpleAccent,
                        // The button text
                        child: Text(
                          'Login',
                          style: TextStyle(color: Colors.white, fontSize: 18),
                        ),
...
                                        .connectToInternetDialog();
                                  });
                            }
                          }
                        }),
                    RaisedButton(
                        key: Key('CustomerRegistration'),
                        color: Colors.deepPurpleAccent,
                        // The button text
                        child: Text(
                          'Register',
                          style: TextStyle(color: Colors.white, fontSize: 18),
                        ),
...
                  ],
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(10),
                child: InkWell(
                  key: Key('GuestLogin'),
                  child: Text(
                    'Continue as guest (login required for basket and checkout)',
                    style: TextStyle(color: Colors.deepPurple, fontSize: 14),
                  ),
                  onTap: () async {
                    // If the there is an internet connection,
...
