...
        appBar: AppBar(
          key: Key('EmployeeLoginPage'),
          title: Text('Employee Login Page'),
          backgroundColor: Colors.deepPurple,
          actions: <Widget>[
            IconButton(
              key: Key('GoToAdministratorLogin'),
              icon: Icon(Icons.lock),
              color: Colors.white,
              onPressed: () {
                Navigator.push(
                    context,
                    MaterialPageRoute(
...
                ),
              ),
              Padding(
                padding: const EdgeInsets.all(10),
                // Button to login the employee
                child: RaisedButton(
                  key: Key('EmployeeLogin'),
                  color: Colors.deepPurpleAccent,
                  // When the button is pressed,
                  // When the button is pressed,
                  onPressed: () async {
                    // Set initial value for invalid data entry to false
                    bool invalid = false;
...
                                      child: SingleChildScrollView(
                                        child: Column(
                                          children: <Widget>[
                                            Padding(
                                              padding: const EdgeInsets.all(10),
                                              child: TextField(
                                                key: Key('UpdateEmployeePassword'),
                                                controller:
                                                    updatePasswordController,
                                                obscureText: true,
                                                decoration: InputDecoration(
                                                  border: OutlineInputBorder(),
                                                  labelText: 'Password',
...
                                          // When cancel pressed,
                                          onPressed: () {
                                            // Close the dialog
                                            Navigator.pop(context);
                                          }),
                                      new FlatButton(
                                          key: Key('UpdatePasswordConfirm'),
                                          child: new Text('OK',
                                              style: TextStyle(
                                                  color: Colors.deepPurple,
                                                  fontSize: 18)),
                                          // When ok pressed,
                                          onPressed: () async {
...
